compilador-swift/compilador-swift/Entrega1/generated/gramaticaParser.swift
// Generated from grammar/gramatica.g4 by ANTLR 4.13.2
import Antlr4

open class gramaticaParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = gramaticaParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(gramaticaParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, PROGRAMA = 1, VARS = 2, INICIO = 3, FIN = 4, ENTERO = 5, 
                 FLOTANTE = 6, ESCRIBE = 7, MIENTRAS = 8, HAZ = 9, SI = 10, 
                 SINO = 11, NULA = 12, SEMICOLON = 13, COLON = 14, COMMA = 15, 
                 LPAREN = 16, RPAREN = 17, LBRACE = 18, RBRACE = 19, LBRACKET = 20, 
                 RBRACKET = 21, PLUS = 22, MINUS = 23, MULT = 24, DIV = 25, 
                 ASSIGN = 26, GREATER = 27, LESS = 28, NOT_EQUAL = 29, EQUAL_EQUAL = 30, 
                 ID = 31, CTE_INT = 32, CTE_FLOAT = 33, LETRERO = 34, WS = 35
	}

	public
	static let RULE_programa = 0, RULE_vars = 1, RULE_tipo = 2, RULE_cuerpo = 3, 
            RULE_estatuto = 4, RULE_asigna = 5, RULE_imprime = 6, RULE_ciclo = 7, 
            RULE_condicion = 8, RULE_factor = 9, RULE_funcs = 10, RULE_expresion = 11, 
            RULE_llamada = 12, RULE_termino = 13, RULE_exp = 14, RULE_cte = 15

	public
	static let ruleNames: [String] = [
		"programa", "vars", "tipo", "cuerpo", "estatuto", "asigna", "imprime", 
		"ciclo", "condicion", "factor", "funcs", "expresion", "llamada", "termino", 
		"exp", "cte"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'programa'", "'vars'", "'inicio'", "'fin'", "'entero'", "'flotante'", 
		"'escribe'", "'mientras'", "'haz'", "'si'", "'sino'", "'nula'", "';'", 
		"':'", "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'+'", "'-'", 
		"'*'", "'/'", "'='", "'>'", "'<'", "'!='", "'=='"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "PROGRAMA", "VARS", "INICIO", "FIN", "ENTERO", "FLOTANTE", "ESCRIBE", 
		"MIENTRAS", "HAZ", "SI", "SINO", "NULA", "SEMICOLON", "COLON", "COMMA", 
		"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "PLUS", 
		"MINUS", "MULT", "DIV", "ASSIGN", "GREATER", "LESS", "NOT_EQUAL", "EQUAL_EQUAL", 
		"ID", "CTE_INT", "CTE_FLOAT", "LETRERO", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "gramatica.g4" }

	override open
	func getRuleNames() -> [String] { return gramaticaParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return gramaticaParser._serializedATN }

	override open
	func getATN() -> ATN { return gramaticaParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return gramaticaParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,gramaticaParser._ATN,gramaticaParser._decisionToDFA, gramaticaParser._sharedContextCache)
	}


	public class ProgramaContext: ParserRuleContext {
			open
			func PROGRAMA() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.PROGRAMA.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.ID.rawValue, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func vars() -> VarsContext? {
				return getRuleContext(VarsContext.self, 0)
			}
			open
			func funcs() -> FuncsContext? {
				return getRuleContext(FuncsContext.self, 0)
			}
			open
			func INICIO() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.INICIO.rawValue, 0)
			}
			open
			func cuerpo() -> CuerpoContext? {
				return getRuleContext(CuerpoContext.self, 0)
			}
			open
			func FIN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.FIN.rawValue, 0)
			}
			open
			func EOF() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.EOF.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_programa
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterPrograma(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitPrograma(self)
			}
		}
	}
	@discardableResult
	 open func programa() throws -> ProgramaContext {
		var _localctx: ProgramaContext
		_localctx = ProgramaContext(_ctx, getState())
		try enterRule(_localctx, 0, gramaticaParser.RULE_programa)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(32)
		 	try match(gramaticaParser.Tokens.PROGRAMA.rawValue)
		 	setState(33)
		 	try match(gramaticaParser.Tokens.ID.rawValue)
		 	setState(34)
		 	try match(gramaticaParser.Tokens.SEMICOLON.rawValue)
		 	setState(35)
		 	try vars()
		 	setState(36)
		 	try funcs()
		 	setState(37)
		 	try match(gramaticaParser.Tokens.INICIO.rawValue)
		 	setState(38)
		 	try cuerpo()
		 	setState(39)
		 	try match(gramaticaParser.Tokens.FIN.rawValue)
		 	setState(40)
		 	try match(gramaticaParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VarsContext: ParserRuleContext {
			open
			func VARS() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.VARS.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.ID.rawValue, 0)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.COLON.rawValue, 0)
			}
			open
			func tipo() -> TipoContext? {
				return getRuleContext(TipoContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SEMICOLON.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_vars
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterVars(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitVars(self)
			}
		}
	}
	@discardableResult
	 open func vars() throws -> VarsContext {
		var _localctx: VarsContext
		_localctx = VarsContext(_ctx, getState())
		try enterRule(_localctx, 2, gramaticaParser.RULE_vars)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(42)
		 	try match(gramaticaParser.Tokens.VARS.rawValue)
		 	setState(43)
		 	try match(gramaticaParser.Tokens.ID.rawValue)
		 	setState(44)
		 	try match(gramaticaParser.Tokens.COLON.rawValue)
		 	setState(45)
		 	try tipo()
		 	setState(46)
		 	try match(gramaticaParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TipoContext: ParserRuleContext {
			open
			func ENTERO() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.ENTERO.rawValue, 0)
			}
			open
			func FLOTANTE() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.FLOTANTE.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_tipo
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterTipo(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitTipo(self)
			}
		}
	}
	@discardableResult
	 open func tipo() throws -> TipoContext {
		var _localctx: TipoContext
		_localctx = TipoContext(_ctx, getState())
		try enterRule(_localctx, 4, gramaticaParser.RULE_tipo)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(48)
		 	_la = try _input.LA(1)
		 	if (!(_la == gramaticaParser.Tokens.ENTERO.rawValue || _la == gramaticaParser.Tokens.FLOTANTE.rawValue)) {
		 	try _errHandler.recoverInline(self)
		 	}
		 	else {
		 		_errHandler.reportMatch(self)
		 		try consume()
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class CuerpoContext: ParserRuleContext {
			open
			func LBRACE() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.LBRACE.rawValue, 0)
			}
			open
			func RBRACE() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.RBRACE.rawValue, 0)
			}
			open
			func estatuto() -> [EstatutoContext] {
				return getRuleContexts(EstatutoContext.self)
			}
			open
			func estatuto(_ i: Int) -> EstatutoContext? {
				return getRuleContext(EstatutoContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_cuerpo
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterCuerpo(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitCuerpo(self)
			}
		}
	}
	@discardableResult
	 open func cuerpo() throws -> CuerpoContext {
		var _localctx: CuerpoContext
		_localctx = CuerpoContext(_ctx, getState())
		try enterRule(_localctx, 6, gramaticaParser.RULE_cuerpo)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(50)
		 	try match(gramaticaParser.Tokens.LBRACE.rawValue)
		 	setState(54)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 2148533632) != 0)) {
		 		setState(51)
		 		try estatuto()


		 		setState(56)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(57)
		 	try match(gramaticaParser.Tokens.RBRACE.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class EstatutoContext: ParserRuleContext {
			open
			func asigna() -> AsignaContext? {
				return getRuleContext(AsignaContext.self, 0)
			}
			open
			func condicion() -> CondicionContext? {
				return getRuleContext(CondicionContext.self, 0)
			}
			open
			func ciclo() -> CicloContext? {
				return getRuleContext(CicloContext.self, 0)
			}
			open
			func llamada() -> LlamadaContext? {
				return getRuleContext(LlamadaContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func imprime() -> ImprimeContext? {
				return getRuleContext(ImprimeContext.self, 0)
			}
			open
			func LBRACKET() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.LBRACKET.rawValue, 0)
			}
			open
			func estatuto() -> EstatutoContext? {
				return getRuleContext(EstatutoContext.self, 0)
			}
			open
			func RBRACKET() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.RBRACKET.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_estatuto
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterEstatuto(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitEstatuto(self)
			}
		}
	}
	@discardableResult
	 open func estatuto() throws -> EstatutoContext {
		var _localctx: EstatutoContext
		_localctx = EstatutoContext(_ctx, getState())
		try enterRule(_localctx, 8, gramaticaParser.RULE_estatuto)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(70)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,1, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(59)
		 		try asigna()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(60)
		 		try condicion()

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(61)
		 		try ciclo()

		 		break
		 	case 4:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(62)
		 		try llamada()
		 		setState(63)
		 		try match(gramaticaParser.Tokens.SEMICOLON.rawValue)

		 		break
		 	case 5:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(65)
		 		try imprime()

		 		break
		 	case 6:
		 		try enterOuterAlt(_localctx, 6)
		 		setState(66)
		 		try match(gramaticaParser.Tokens.LBRACKET.rawValue)
		 		setState(67)
		 		try estatuto()
		 		setState(68)
		 		try match(gramaticaParser.Tokens.RBRACKET.rawValue)

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class AsignaContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.ID.rawValue, 0)
			}
			open
			func ASSIGN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.ASSIGN.rawValue, 0)
			}
			open
			func expresion() -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SEMICOLON.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_asigna
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterAsigna(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitAsigna(self)
			}
		}
	}
	@discardableResult
	 open func asigna() throws -> AsignaContext {
		var _localctx: AsignaContext
		_localctx = AsignaContext(_ctx, getState())
		try enterRule(_localctx, 10, gramaticaParser.RULE_asigna)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(72)
		 	try match(gramaticaParser.Tokens.ID.rawValue)
		 	setState(73)
		 	try match(gramaticaParser.Tokens.ASSIGN.rawValue)
		 	setState(74)
		 	try expresion()
		 	setState(75)
		 	try match(gramaticaParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ImprimeContext: ParserRuleContext {
			open
			func ESCRIBE() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.ESCRIBE.rawValue, 0)
			}
			open
			func LPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func expresion() -> [ExpresionContext] {
				return getRuleContexts(ExpresionContext.self)
			}
			open
			func expresion(_ i: Int) -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, i)
			}
			open
			func LETRERO() -> [TerminalNode] {
				return getTokens(gramaticaParser.Tokens.LETRERO.rawValue)
			}
			open
			func LETRERO(_ i:Int) -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.LETRERO.rawValue, i)
			}
			open
			func COMMA() -> [TerminalNode] {
				return getTokens(gramaticaParser.Tokens.COMMA.rawValue)
			}
			open
			func COMMA(_ i:Int) -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.COMMA.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_imprime
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterImprime(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitImprime(self)
			}
		}
	}
	@discardableResult
	 open func imprime() throws -> ImprimeContext {
		var _localctx: ImprimeContext
		_localctx = ImprimeContext(_ctx, getState())
		try enterRule(_localctx, 12, gramaticaParser.RULE_imprime)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(77)
		 	try match(gramaticaParser.Tokens.ESCRIBE.rawValue)
		 	setState(78)
		 	try match(gramaticaParser.Tokens.LPAREN.rawValue)
		 	setState(81)
		 	try _errHandler.sync(self)
		 	switch (gramaticaParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .LPAREN:fallthrough
		 	case .PLUS:fallthrough
		 	case .MINUS:fallthrough
		 	case .ID:fallthrough
		 	case .CTE_INT:fallthrough
		 	case .CTE_FLOAT:
		 		setState(79)
		 		try expresion()

		 		break

		 	case .LETRERO:
		 		setState(80)
		 		try match(gramaticaParser.Tokens.LETRERO.rawValue)

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		 	setState(90)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == gramaticaParser.Tokens.COMMA.rawValue) {
		 		setState(83)
		 		try match(gramaticaParser.Tokens.COMMA.rawValue)
		 		setState(86)
		 		try _errHandler.sync(self)
		 		switch (gramaticaParser.Tokens(rawValue: try _input.LA(1))!) {
		 		case .LPAREN:fallthrough
		 		case .PLUS:fallthrough
		 		case .MINUS:fallthrough
		 		case .ID:fallthrough
		 		case .CTE_INT:fallthrough
		 		case .CTE_FLOAT:
		 			setState(84)
		 			try expresion()

		 			break

		 		case .LETRERO:
		 			setState(85)
		 			try match(gramaticaParser.Tokens.LETRERO.rawValue)

		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}


		 		setState(92)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(93)
		 	try match(gramaticaParser.Tokens.RPAREN.rawValue)
		 	setState(94)
		 	try match(gramaticaParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class CicloContext: ParserRuleContext {
			open
			func MIENTRAS() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.MIENTRAS.rawValue, 0)
			}
			open
			func LPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func expresion() -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func HAZ() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.HAZ.rawValue, 0)
			}
			open
			func cuerpo() -> CuerpoContext? {
				return getRuleContext(CuerpoContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SEMICOLON.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_ciclo
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterCiclo(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitCiclo(self)
			}
		}
	}
	@discardableResult
	 open func ciclo() throws -> CicloContext {
		var _localctx: CicloContext
		_localctx = CicloContext(_ctx, getState())
		try enterRule(_localctx, 14, gramaticaParser.RULE_ciclo)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(96)
		 	try match(gramaticaParser.Tokens.MIENTRAS.rawValue)
		 	setState(97)
		 	try match(gramaticaParser.Tokens.LPAREN.rawValue)
		 	setState(98)
		 	try expresion()
		 	setState(99)
		 	try match(gramaticaParser.Tokens.RPAREN.rawValue)
		 	setState(100)
		 	try match(gramaticaParser.Tokens.HAZ.rawValue)
		 	setState(101)
		 	try cuerpo()
		 	setState(102)
		 	try match(gramaticaParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class CondicionContext: ParserRuleContext {
			open
			func SI() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SI.rawValue, 0)
			}
			open
			func LPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func expresion() -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func cuerpo() -> [CuerpoContext] {
				return getRuleContexts(CuerpoContext.self)
			}
			open
			func cuerpo(_ i: Int) -> CuerpoContext? {
				return getRuleContext(CuerpoContext.self, i)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func SINO() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.SINO.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_condicion
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterCondicion(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitCondicion(self)
			}
		}
	}
	@discardableResult
	 open func condicion() throws -> CondicionContext {
		var _localctx: CondicionContext
		_localctx = CondicionContext(_ctx, getState())
		try enterRule(_localctx, 16, gramaticaParser.RULE_condicion)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(104)
		 	try match(gramaticaParser.Tokens.SI.rawValue)
		 	setState(105)
		 	try match(gramaticaParser.Tokens.LPAREN.rawValue)
		 	setState(106)
		 	try expresion()
		 	setState(107)
		 	try match(gramaticaParser.Tokens.RPAREN.rawValue)
		 	setState(108)
		 	try cuerpo()
		 	setState(111)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == gramaticaParser.Tokens.SINO.rawValue) {
		 		setState(109)
		 		try match(gramaticaParser.Tokens.SINO.rawValue)
		 		setState(110)
		 		try cuerpo()

		 	}

		 	setState(113)
		 	try match(gramaticaParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FactorContext: ParserRuleContext {
			open
			func LPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func expresion() -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.ID.rawValue, 0)
			}
			open
			func cte() -> CteContext? {
				return getRuleContext(CteContext.self, 0)
			}
			open
			func PLUS() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.PLUS.rawValue, 0)
			}
			open
			func MINUS() -> TerminalNode? {
				return getToken(gramaticaParser.Tokens.MINUS.rawValue, 0)
			}
			open
			func llamada() -> LlamadaContext? {
				return getRuleContext(LlamadaContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return gramaticaParser.RULE_factor
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.enterFactor(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? gramaticaListener {
				listener.exitFactor(self)
			}
		}
	}
	@discardableResult
	 open func factor() throws -> FactorContext {
		var _localctx: FactorContext
		_localctx = FactorContext(_ctx, getState())
		try enterRule(_localctx, 18, gramaticaParser.RULE_factor)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(127)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,8, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(115)
		 		try match(gramaticaParser.Tokens.LPAREN.rawValue)
		 		setState(116)
		 		try expresion()
		 		setState(117)
		 		try match(gramaticaParser.Tokens.RPAREN.rawValue)

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(120)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		if (_la == gramaticaParser.Tokens.PLUS.rawValue || _la == gramaticaParser.Tokens.MINUS.rawValue) {
		 			setState(119)
		 			_la = try _input.LA(1)
		 			if (!(_la == gramaticaParser.Tokens.PLUS.rawValue || _la == gramaticaParser.Tokens.MINUS.rawValue)) {
		 			try _errHandler.recoverInline(self)
		 			}
		 			else {
		 				_errHandler.reportMatch(self)
		 				try consume()
		 			}

		 		}

		 		setState(124)
		 		try _errHandler.sync(self)
		 		switch (gramaticaParser.Tokens(rawValue: try _input.LA(1))!) {
		 		case .ID:
		 			setState(122)
		 			try match(gramaticaParser.Tokens.ID.rawValue)

		 			break
		 		case .CTE_INT:fallthrough
		 		case .CTE_FLOAT:
		 			setState(123)
		 			try cte()

		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(126)
		 		try llamada()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
